# kobold-legacy

./: .gitignore  .pre-commit-config.yaml  .python-version  .sourcery.yaml  README.md  kobold.py  lulu.bat  pyproject.toml  ruff.toml
data/: items.json
requirements/: readme.md  requirements.txt
src/: creature.py  dummy_message.py  dungeon.py  encounter.py  item.py  kobold.py  party.py  tile.py  tribe.py  world.py
