[project]
name = "KoboldLegacy"
version = "1.0.0"
description = "A discord bot game where players play the role of kobolds surviving in a harsh, low-tech environment."
authors = [
    { name = "Prometheos2", email = "45640841+Prometheos2@users.noreply.github.com" },
    { name = "GlyphGryph", email = "glyphgryph@gmail.com" },
    { name = "Blahsadfeguie", email = "86696745+Blahsadfeguie@users.noreply.github.com" },
    { name = "horusboyd", email = "thafunkyequine@hotmail.com" },
]
dependencies = ["python-dotenv>=1.0.0", "discord>=2.3.2"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "GNU" }

# Exports requirements.txt files so that GitHub can scan dependencies.
[[tool.pdm.autoexport]]
filename = "requirements/requirements.txt"
groups = ["default", "dev"]
without-hashes = "true"

[tool.pdm.dev-dependencies]
dev = [
    # Autopep8 formatter, supposed to fix pycodestyle issues
    "autopep8>=2.0.2",
]
